<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/width3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        android:contentDescription="@string/thin_width"
        android:src="@drawable/path_width_10"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/width2"
        />

    <ImageView
        android:id="@+id/width2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        android:contentDescription="@string/medium_width"
        android:src="@drawable/path_width_5"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/width1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/width3"
        />

    <ImageView
        android:id="@+id/width1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        android:contentDescription="@string/thick_width"
        android:src="@drawable/path_width"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/width2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>